# Media_Player

./: CMakeLists.txt  Capston  ImageSlideshow.cpp  ImageSlideshow.h  Makefile  README.md  VideoPlayer.cpp  VideoPlayer.h  cmake_install.cmake  main.cpp
